# icer_compression

./: .gitignore  CMakeLists.txt  README.md
example/inc/: color_util.h  stb_image.h
example/src/: example_decode.c  example_decode_color.c  example_encode.c  example_encode_color.c  icer_util.c  main.c
inc/: crc.h  icer.h  stb_image_resize.h  stb_image_write.h
lib_icer/: CMakeLists.txt
lib_icer/inc/: icer.h
lib_icer/src/: crc32.c  icer_color.c  icer_compress.c  icer_config.c  icer_context_modeller.c  icer_decoding.c  icer_encoding.c  icer_init.c  icer_partition.c  icer_util.c  icer_wavelet.c
src/: crc32.c  icer.c  icer_compress.c  icer_config.c  icer_context_modeller.c  icer_decoding.c  icer_encoding.c  icer_init.c  icer_partition.c  icer_util.c  icer_wavelet.c  main.c  stb_lib.c
